# FasterTransformer_AFPQ

./: .gitignore  .gitmodules  CMakeLists.txt  cpp_config.ini
examples/cpp/: CMakeLists.txt
examples/cpp/llama/: CMakeLists.txt  huggingface_llama_convert.py  huggingface_llama_convert_quant.py  llama1_13b_config.ini  llama1_30b_config.ini  llama1_65b_config.ini  llama1_7b_config.ini  llama_2_13b_config.ini  llama_2_7b_config.ini  llama_example.cc  llama_gemm.cc  start_ids copy.csv  start_ids.csv
examples/cpp/multi_gpu_gpt/: multi_gpu_gpt_example.cc
examples/pytorch/llama/: llama_example.py
meeting record/: 4.11.md  4.13.md  4.18.md  4.20.md  4.25.md  4.27.md  4.6.md  5.11.md  5.16.md  5.2.md  5.4.md  5.9.md
performance_data/: b128_max_active_experts.csv  b128_peak_mems.csv  b16-ubench_block_lats.csv  block_lats.csv  l128_cache_ssd_ondemand_block_lats.csv  l128_cache_ssd_ondemand_throughputs.csv  l128_cache_ssd_throughputs.csv  max_active_experts.csv  peak_mems.csv  throughputs.csv  ubench_b64_block_lats.csv  ubench_b64_throughputs.csv  ubench_b8_block_lats.csv  ubench_b8_throughputs.csv  ubench_block_lats.csv  ubench_throughputs.csv
scripts/: convert.sh  eval_all.py  tokenizer.py
src/fastertransformer/layers/: FfnLayer.cc  (+1 more)
src/fastertransformer/utils/ladder_gemm/: CMakeLists.txt  ladder_gemm_fp16_int4_fp16.cu  ladder_gemm_fp16_nf4_fp16.cu  ladder_gemm_fp16_nf4_fp16_1scale.cu  ladder_gemm_fp16_nf4_fp16_1scale_m16.cu  ladder_gemm_fp16_nf4_fp16_2scale.cu  ladder_gemm_fp16_nf4_fp16_2scale_2.cu  ladder_gemm_fp16_nf4_fp16_2scale_3.cu  ladder_kernel.h  t.cu
(+20 files in other folders)
